# bench

./: .gitignore  README.md
.github/workflows/: deploy-docs.yml
backend/: pyproject.toml
backend/app/: config.py  email.py  main.py
backend/app/api/: agents.py  auth.py  automation.py  chat.py  failures.py  invites.py  runs.py  scenarios.py  suites.py  workspaces.py
backend/app/models/: __init__.py  agent.py  automation.py  workspace_invite.py
backend/app/runner/: executor.py  simple_llm_judge.py
backend/app/runner/connectors/: __init__.py  base.py  http_json.py  local_python.py  registry.py
backend/app/schemas/: agent.py  automation.py  failure.py  scenario.py  suite.py  test_run.py
backend/postman/: Bench-API.postman_collection.json
backend/scripts/: smoke_http_json_agent.py
cli/: pyproject.toml
cli/bench/: _ctx.py  client.py  config.py  display.py  main.py
cli/bench/commands/: agents.py  runs.py  scenarios.py  suites.py
docs/: README.md  agent-connector-rfc.md  api-reference.md  api.md  ci-automation.md  concepts.md  connecting-agents.md  design-principles.md  developer-guide.md  external-agent-integration.md  getting-started.md  http-json-agent-template.md  index.mdx  mint.json
docs/api-reference/: authentication.mdx  automation.mdx  overview.mdx  runs.mdx  scenarios.mdx
docs/demo-video/: 01-agent-creation.webm  02-scenario-creation.webm  03-scenario-test.webm  04-suite-create-and-test.webm  05-agent-edit.webm  06-run-compare.webm  07-failures-triage.webm  08-settings-logout.webm  09-suite-history-filter.webm  (+1 more)
frontend/: DESIGN.md
(+52 files in other folders)
